--- a/Birthday/style.css
+++ b/Birthday/style.css
@@ -344,8 +344,72 @@ h5 {
   margin: 4px 0;
 }
 
+}
 
+/*?==========================  500px max =========================================== */
 
-
-
+@media(max-width: 500px) {
+  .wrapper {
+    position: relative;
+    width: 85vw;
+    /* background: #000; */
+  }
+  .age_information {
+    width: 100%;
+    font-size: 1.2em;
+    padding-top: 0;
+  }
+  .check {
+    font-size: 1.4em;
+    width: 100px;
+    height: 40px;
+  }
+  input {
+    width: 200px;
+    height: 40px;
+    font-size: 1.6em;
+  }
+  .answer h4 {margin-left: 106px;}
+  .answer {
+    font-size: 1.2em;
+    width: 100%;
+  }
+  .pages {width: 100%;}
+  .pages_button_a {
+    padding: 8px 20px;
+  }
+  .aside {
+    width: 80vw;
+    height: 350px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 4px;
+    /* display: none; */
+  }
+  .aside h5 {
+    grid-column: 1/3;
+    margin-left: 40px;
+    margin-top: 5px;
+  }
+  .button {
+    margin: 0;
+  }
+  .parent {display: flex;justify-content: center;}
+  .section {
+    position: absolute;
+    top: 90vh;
+    width: 85vw;
+    gap: 4px;
+    /* display: none; */
+  }
+  .MyCard {
+    width: 100%;
+  }
+  .card-body {
+    width: 96%;
+  }
+  .card-body h5 {
+    padding: 0;
+    margin: 0;
+  }
 }
