--- a/css/style.css
+++ b/css/style.css
@@ -263,20 +263,29 @@ h5 {
   }
   .content {
     top: 4%;
+    width: 300px;
+  }
+  .content h1 {
+    width: 150px;
+  }
+  .content h3 {
+    margin-top: 40px;
+    width: 150px;
   }
   .h1 {font-size: 2em;}
   .newsletter {
-    width: 250px;
+    width: 110%;
   }
   .newsletter form input:last-child {
-    width: 35%;
+    width: 40%;
     padding: 10px;
   }
   .about-text {
-    width: 400px;
-    margin-top: 100px;
+    width: 90%;
+    margin-top: 95px;
+    font-size: 5em;
   }
-  .about-text h2 {font-size: 2em;}
+  /* .about-text h2 {font-size: 2em;} */
   .service {
     padding: 10px 0;
   }
