--- a/css/style.css
+++ b/css/style.css
@@ -153,6 +153,7 @@ button:hover {
   background: #000;
   width: 100%;
   padding: 100px 0;
+  overflow-y: hidden;
 }
 
 .title h2 {
@@ -247,56 +248,3 @@ h5 {
   color: #f9004d;
 }
 
-/*?==============  Responsive Design 500px ========================  */
-
-@media(max-width:500px) {
-  .hero::before {
-    top: 3%;
-    right: 4%;
-    width: 130px;
-    height: 190px;
-    border-radius: 10px;
-    background-position-x: -16px;
-    background-position-y: -8px;
-    box-shadow: inset 0 0 2em;
-    
-  }
-  .content {
-    top: 4%;
-    width: 300px;
-  }
-  .content h1 {
-    width: 150px;
-  }
-  .content h3 {
-    width: 150px;
-  }
-  .h1 {font-size: 2em;}
-  .newsletter {
-    width: 110%;
-  }
-  .newsletter form input:last-child {
-    width: 40%;
-    padding: 10px;
-  }
-  .about-text {
-    position: absolute;
-    top: 99%;
-    width: 90%;
-    /* margin-top: 95px; */
-    font-size: 5em;
-  }
-  /* .about-text h2 {font-size: 2em;} */
-  .service {
-    padding: 10px 0;
-  }
-  
-  .title h2 {
-    font-size: 2.5em;
-    margin: 30px 0;
-    text-align: center;
-  }
-  .box {
-    flex-direction: column;
-  }
-}
