--- a/css/style.css
+++ b/css/style.css
@@ -6,31 +6,30 @@
   font-family: 'Josefin Sans', sans-serif;
 }
 body {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   overflow-x: hidden;
 }
 .hero {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
   height: 100%;
-  width: 100;
+  width: 100%;
   background: #4568DC;
   /* fallback for old browsers */
   background: -webkit-gradient(linear, left top, right top, from(#243878), to(#59355a));
   background: linear-gradient(to right, #243878, #59355a);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
-.hero::before {
-  content: '';
-  position: absolute;
-  top: 15%;
-  right: 10%;
-  width: 400px;
-  height: 500px;
-  border-radius: 50px;
+.img {
+  width: 200px;
+  height: 300px;
+  border-radius: 5px;
   background-image: url(Creator.jpg);
   background-size: 135%;
-  background-position-x: -66px;
-  background-position-y: -40px;
+  background-position-x: -36px;
+  background-position-y: -0px;
   box-shadow: inset 0 0 10em;
 }
 
@@ -39,15 +38,17 @@ span {
 }
 
 .content {
-  position: relative;
-  top: 8%;
-  left: 8%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+  
 }
 
 h1 {
   color: white;
-  margin: 20px 0 20px;
-  font-size: 75px;
+  margin: 15px 0;
+  font-size: 50px;
 }
 
 h3 {
@@ -128,7 +129,7 @@ h4 {
   letter-spacing: 1px;
   line-height: 28px;
   font-size: 18px;
-  margin-bottom: 45px;
+  margin-bottom: 20px;
 }
 
 button {
@@ -155,13 +156,13 @@ button:hover {
   padding: 100px 0;
   overflow-y: hidden;
 }
-
-.title h2 {
+.title {
+  display: flex;
+  justify-content: center;
   color: white;
-  font-size: 75px;
+  font-size: 45px;
   margin: 30px 220px;
 }
-
 .box {
   display: -webkit-box;
   display: -ms-flexbox;
